--- a/.github/workflows/use-reuse.yml
+++ b/.github/workflows/use-reuse.yml
@@ -66,7 +66,9 @@ jobs:
           path: dist
   deploy:
     needs: build
-    uses: ./.github/workflows/reusable.yml  
+    uses: ./.github/workflows/reusable.yml
+    with:
+      artifact-name: dist-files  
   report:
     needs: [lint, deploy]
     if: failure()
