--- a/.github/workflows/use-reuse.yml
+++ b/.github/workflows/use-reuse.yml
@@ -68,7 +68,9 @@ jobs:
     needs: build
     uses: ./.github/workflows/reusable.yml
     with:
-      artifact-name: dist-files  
+      artifact-name: dist-files
+    # secrets:
+    #   some-secret: ${{ secrets.SOME_SECRET }}  
   report:
     needs: [lint, deploy]
     if: failure()
