--- a/.github/workflows/use-reuse.yml
+++ b/.github/workflows/use-reuse.yml
@@ -70,7 +70,13 @@ jobs:
     with:
       artifact-name: dist-files
     # secrets:
-    #   some-secret: ${{ secrets.SOME_SECRET }}  
+    #   some-secret: ${{ secrets.SOME_SECRET }}
+  print-deploy-result:
+    runs-on: ubuntu-latest
+    needs: deploy
+    steps:
+      - name: Print deploy output
+        run: echo "${{ toJSON(needs.deploy.outputs.result) }}"
   report:
     needs: [lint, deploy]
     if: failure()
